Fix small bug regarding modal close icon on mobile

--- a/src/components/subheader/Subheader.module.css
+++ b/src/components/subheader/Subheader.module.css
@@ -42,6 +42,7 @@
   position: absolute;
   right: 20px;
   top: 20px;
+  width: auto;
 }
 
 @media (min-width: 1160px) {
